--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <main>
-    <div class="card-pokemon">
-        <h1>ditto</h1>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/132.png" alt="imagen pokemon ditto">
-        <p>Experiencia: 101</p>
+    <div class="card-pokemon" id="pokemon">
+        <div>
+     <img class= 'img-pokemon 'src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/132.png" alt="imagen pokemon ditto">
+      </div>
     </div>
     </main>
     <script src="datapoke.js"></script>
